--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -16,24 +16,25 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ## below is for anmol098 style
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_PROJECTS: "False"
+          # SHOW_PROFILE_VIEWS: "False"
+          # SHOW_LOC_CHART: "False"
+          # SHOW_PROJECTS: "False"
+          
           ## below is for athul style
-          # SHOW_TITLE: true # optional
-          # BLOCKS: -> # optional
-          # TIME_RANGE: all_time # optional
-          # LANG_COUNT: 10 # optional
-          # SHOW_TIME: true # optional
-          # SHOW_TOTAL: true # optional
-          # SHOW_MASKED_TIME: false # optional
-          # STOP_AT_OTHER: true # optional
-          # ### commit
-          # COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
-          # TARGET_BRANCH: master # optional
-          # TARGET_PATH: README.md # optional
-          # COMMITTER_NAME: GitHubActionBot # optional
-          # COMMITTER_EMAIL: action-bot@github.com # optional
-          # AUTHOR_NAME: YOUR_NAME # optional
-          # AUTHOR_EMAIL: YOUR@EMAIL.com # optional
-          # # you can populate email-id with secretes instead
+          SHOW_TITLE: true # optional
+          BLOCKS: -> # optional
+          TIME_RANGE: all_time # optional
+          LANG_COUNT: 10 # optional
+          SHOW_TIME: true # optional
+          SHOW_TOTAL: true # optional
+          SHOW_MASKED_TIME: false # optional
+          STOP_AT_OTHER: true # optional
+          ### commit
+          COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
+          TARGET_BRANCH: master # optional
+          TARGET_PATH: README.md # optional
+          COMMITTER_NAME: GitHubActionBot # optional
+          COMMITTER_EMAIL: action-bot@github.com # optional
+          AUTHOR_NAME: YOUR_NAME # optional
+          AUTHOR_EMAIL: YOUR@EMAIL.com # optional
+          # you can populate email-id with secretes instead
