--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -29,7 +29,7 @@ jobs:
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
           STOP_AT_OTHER: true # optional
-          IGNORED_LANGUAGES: JSON TEXT # optional
+          IGNORED_LANGUAGES: JSON Text # optional
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
           TARGET_BRANCH: master # optional
